# rrc-g2o

multibody-optimise/code/: 3_0_13-50.txt  CMakeLists.txt  plotEgoAndVehTracj.m  plotresults.m  plotresultsWithCam.m  rotMatY.m  testSim3_new.cpp  testSim_old.cpp  v2v.txt
scripts/: find_motion.m  find_motion.m~
scripts/results/: 4_2_17-43.txt  4_ego_17-43.txt
se3/code/: .gitignore  Priors.hpp  README.md  afterOpti.txt  beforeOpti.txt  optimizeSE3  optimizeSE3.cpp  rowVecToMat.m  testSim3.cpp
